<?xml version="1.0" encoding="utf-8"?>
<com.example.demozing.custom.LinearLayoutThatDetectsSoftKeyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
    android:id="@+id/root"
    android:orientation="vertical"
     android:background="@color/bg_login" >
  <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username"
            android:layout_alignParentTop="true"
            android:layout_marginTop="22dp"
            android:src="@drawable/ztv_logo" />
    <RelativeLayout
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:padding="10dp" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username"
            android:layout_below="@+id/username"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="Zing ID"
            android:padding="10dp"
            android:textSize="14sp" />

        <com.example.demozing.custom.DrawableAlignedButton
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_login_facebook"
            android:drawableLeft="@drawable/com_facebook_inverse_icon"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/login_by_facebook"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

      

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:hint="Zing ID"
            android:padding="0dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.example.demozing.custom.DrawableAlignedButton
            android:id="@+id/zalo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/facebook"
            android:layout_below="@+id/facebook"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_login_zalo"
            android:drawableLeft="@drawable/ic_zalo"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/login_by_zalo"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zalo"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:text="@string/registry"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

</com.example.demozing.custom.LinearLayoutThatDetectsSoftKeyboard>